--- a/SASS/_header.scss
+++ b/SASS/_header.scss
@@ -1,56 +1,58 @@
-.header{
+.header {
     display: flex;
+    height: 100px;
+    padding: 20px;
     justify-content: space-between;
     background-color: $primarycolor;
     align-items: center;
-    border-bottom: 5px solid $secondarycolor;
-    &__left{
-        margin-left: 100px;
-        & p{
+    border-bottom: 3px solid $secondarycolor;
+    &__left {
+        margin-left: 130px;
+        & p {
             color: white;
             font-size: 30px;
             line-height: 45px;
             font-weight: 700;
-            & span{
+            & span {
                 color: $secondarycolor;
             }
         }
     }
-    
-    &__right{
-        margin-right: 100px;
-    
-    &--navbar {
-        display: flex;
-        list-style-type: none;
-
-       
-        
-        & li{
-            padding-right: 20px ;
-            & a{
+    &__right {
+        margin-right: 130px;
+        &--navbar {
+            display: flex;
+            list-style-type: none;
+            & li {
+                padding-right: 36px;
+                & a {
+                    text-decoration: none;
+                    text-transform: uppercase;
+                    font-weight: 400;
+                    font-size: 16px;
+                    line-height: 24px;
+                    color: white;
+                }
+                & a:hover {
+                    text-decoration: none;
+                    text-transform: uppercase;
+                    font-weight: 700;
+                    font-size: 16px;
+                    line-height: 24px;
+                    color: #ccc;
+                }
+            }
+            &-home {
+                color: $secondarycolor !important;
                 text-decoration: none;
                 text-transform: uppercase;
-                font-weight: 700;
+                font-weight: 700 !important;
                 font-size: 16px;
                 line-height: 24px;
-                color: white;
-            //     &-home{
-            //         color: $secondarycolor;
-            // }
-
             }
-            
-
-
+            &-home:hover {
+                color: #ccc !important;
+            }
         }
-
-       
-            
-        }
-
-       
-
-       
-}
+    }
 }
