--- a/SASS/_hero.scss
+++ b/SASS/_hero.scss
@@ -1,4 +1,5 @@
-.section__hero{
+.section{
+    &__hero{
     background-image: url(./images/showcase.jpg);
     height: 50%;
     padding: 1px;
@@ -20,5 +21,110 @@
         line-height: 30px;
         color: #fff;
         text-align: center;
+    }
+}
+
+&__newsletter {
+    display: flex;
+    justify-content: space-around;
+    height: 100px;
+    font-size: 15px;
+    line-height: 23px;
+    font-weight: 400;
+    padding: 10px;
+    color: #fff;
+    background-color: #35424A;
+    &--subscribe {
+        margin: auto;
+        font-size: 23px;
+        line-height: 34px;
+        font-weight: 700;
+    }
+    &--email {
+        margin: auto;
+        align-items: center;
+        &-input {
+            width: 260px;
+            height: 40px;
+        }
+        &-button {
+            width: 100px;
+            height: 40px;
+            background-color: #A9508B;
+            color: white;
+            border: none;
+        }
+    }
+}
+&__logo {
+    margin: 10px;
+    display: flex;
+    // width: 350;
+    // height: auto;
+    justify-content: center;
+    align-content: center;
+    // border: 2px solid red;
+    
+    & div {
+        // justify-content: center;
+        // align-content: center;
+        text-align: center;
+        margin: 30px 5px;
+        // border: 2px solid red;
+        width: 370px;
+        height: 230px;
+        // display: flex;
+        // flex-direction: column;
+    }
+    & img {
+        width: 100px;
+        height: 100px;
+        margin: 0;
+    }
+    & h3 {
+        font-size: 18px;
+        line-height: 26px;
+        font-weight: 700;
+        margin: 25px;
+        color: #000;
+        
+    }
+    & p {
+        font-size: 15px;
+        line-height: 23px;
+        font-weight: 400;
+        color: #000;
+    }
+}
+}
+
+
+
+// About.html dosyası style yapılmıstır
+
+.section__main{
+    display: flex;
+    margin: 10px 125px;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 23px;
+    align-items: flex-start;
+    &--about{
+        text-align: justify;
+        margin-right: 55px;
+
+        & :nth-child(3){
+            background-color: #35424A;
+            color: #fff;
+            padding: 10px;
+
+        }
+    }
+
+    &--what{
+        background-color: #35424A;
+            color: #fff;
+            padding: 10px;
+            
     }
 }
