--- a/style.css
+++ b/style.css
@@ -347,13 +347,15 @@ html, body {
 
 .header {
   display: flex;
+  height: 100px;
+  padding: 20px;
   justify-content: space-between;
   background-color: #35424A;
   align-items: center;
-  border-bottom: 5px solid #A9508B;
+  border-bottom: 3px solid #A9508B;
 }
 .header__left {
-  margin-left: 100px;
+  margin-left: 130px;
 }
 .header__left p {
   color: white;
@@ -365,22 +367,41 @@ html, body {
   color: #A9508B;
 }
 .header__right {
-  margin-right: 100px;
+  margin-right: 130px;
 }
 .header__right--navbar {
   display: flex;
   list-style-type: none;
 }
 .header__right--navbar li {
-  padding-right: 20px;
+  padding-right: 36px;
 }
 .header__right--navbar li a {
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: white;
+}
+.header__right--navbar li a:hover {
   text-decoration: none;
   text-transform: uppercase;
   font-weight: 700;
   font-size: 16px;
   line-height: 24px;
-  color: white;
+  color: #ccc;
+}
+.header__right--navbar-home {
+  color: #A9508B !important;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: 700 !important;
+  font-size: 16px;
+  line-height: 24px;
+}
+.header__right--navbar-home:hover {
+  color: #ccc !important;
 }
 
 .section__hero {
@@ -403,6 +424,105 @@ html, body {
   line-height: 30px;
   color: #fff;
   text-align: center;
+}
+.section__newsletter {
+  display: flex;
+  justify-content: space-around;
+  height: 100px;
+  font-size: 15px;
+  line-height: 23px;
+  font-weight: 400;
+  padding: 10px;
+  color: #fff;
+  background-color: #35424A;
+}
+.section__newsletter--subscribe {
+  margin: auto;
+  font-size: 23px;
+  line-height: 34px;
+  font-weight: 700;
+}
+.section__newsletter--email {
+  margin: auto;
+  align-items: center;
+}
+.section__newsletter--email-input {
+  width: 260px;
+  height: 40px;
+}
+.section__newsletter--email-button {
+  width: 100px;
+  height: 40px;
+  background-color: #A9508B;
+  color: white;
+  border: none;
+}
+.section__logo {
+  margin: 10px;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+.section__logo div {
+  text-align: center;
+  margin: 30px 5px;
+  width: 370px;
+  height: 230px;
+}
+.section__logo img {
+  width: 100px;
+  height: 100px;
+  margin: 0;
+}
+.section__logo h3 {
+  font-size: 18px;
+  line-height: 26px;
+  font-weight: 700;
+  margin: 25px;
+  color: #000;
+}
+.section__logo p {
+  font-size: 15px;
+  line-height: 23px;
+  font-weight: 400;
+  color: #000;
+}
+
+.section__main {
+  display: flex;
+  margin: 10px 125px;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 23px;
+  align-items: flex-start;
+}
+.section__main--about {
+  text-align: justify;
+  margin-right: 55px;
+}
+.section__main--about :nth-child(3) {
+  background-color: #35424A;
+  color: #fff;
+  padding: 10px;
+}
+.section__main--what {
+  background-color: #35424A;
+  color: #fff;
+  padding: 10px;
+}
+
+.footer {
+  height: 140px;
+  font-size: 15px;
+  line-height: 23px;
+  font-weight: 400;
+  color: #000;
+  background-color: #FFFAF0;
+  border-top: 3px solid #A9508B;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 /*# sourceMappingURL=style.css.map */
