--- a/SASS/style.scss
+++ b/SASS/style.scss
@@ -1,1 +1,6 @@
-@import "normalize", "globals", "header", "navbar", "hero", "footer";
+@import "normalize",
+"globals",
+"header",
+"navbar",
+"hero",
+"footer";
